// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bullet renders correctly with a text 1`] = `
<DocumentFragment>
  .css-1k74lo7-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  background: #ffffff;
  border: 1px solid #d9dadd;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

<div
    class="css-1k74lo7-StyledContainer e11loam60"
  >
    1
  </div>
</DocumentFragment>
`;

exports[`Bullet renders correctly with an icon 1`] = `
<DocumentFragment>
  .css-1k74lo7-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  background: #ffffff;
  border: 1px solid #d9dadd;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

.css-32ydu7-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 50%;
  width: 50%;
  min-width: 50%;
  min-height: 50%;
}

.css-32ydu7-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    class="css-1k74lo7-StyledContainer e11loam60"
  >
    <svg
      class="css-32ydu7-sizeStyles e1gt4cfo0"
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M7.866 2.205a.7.7 0 0 1 .15.765 6.89 6.89 0 0 0 9.013 9.013.701.701 0 0 1 .917.917A8.293 8.293 0 0 1 2 9.709a8.29 8.29 0 0 1 5.1-7.655.7.7 0 0 1 .766.151M6.217 4.152a6.89 6.89 0 1 0 9.631 9.631q-.716.129-1.47.13a8.29 8.29 0 0 1-8.16-9.761"
        fill-rule="evenodd"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Bullet sentiment render danger 1`] = `
<DocumentFragment>
  .css-oil5vi-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #b3144d;
  background: #ffebf2;
  border: 1px solid #ffebf2;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

<div
    class="css-oil5vi-StyledContainer e11loam60"
  >
    1
  </div>
</DocumentFragment>
`;

exports[`Bullet sentiment render disabled 1`] = `
<DocumentFragment>
  .css-1n3x46n-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #727683;
  background: #e9eaeb;
  border: none;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

<div
    class="css-1n3x46n-StyledContainer e11loam60"
  >
    1
  </div>
</DocumentFragment>
`;

exports[`Bullet sentiment render info 1`] = `
<DocumentFragment>
  .css-2edmfk-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #005da3;
  background: #e0f2ff;
  border: 1px solid #e0f2ff;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

<div
    class="css-2edmfk-StyledContainer e11loam60"
  >
    1
  </div>
</DocumentFragment>
`;

exports[`Bullet sentiment render neutral 1`] = `
<DocumentFragment>
  .css-1k74lo7-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  background: #ffffff;
  border: 1px solid #d9dadd;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

<div
    class="css-1k74lo7-StyledContainer e11loam60"
  >
    1
  </div>
</DocumentFragment>
`;

exports[`Bullet sentiment render primary 1`] = `
<DocumentFragment>
  .css-j41hqp-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #641cb3;
  background: #f1eefc;
  border: 1px solid #f1eefc;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

<div
    class="css-j41hqp-StyledContainer e11loam60"
  >
    1
  </div>
</DocumentFragment>
`;

exports[`Bullet sentiment render secondary 1`] = `
<DocumentFragment>
  .css-wex34o-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #ac22e7;
  background: #f9ebff;
  border: 1px solid #f9ebff;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

<div
    class="css-wex34o-StyledContainer e11loam60"
  >
    1
  </div>
</DocumentFragment>
`;

exports[`Bullet sentiment render success 1`] = `
<DocumentFragment>
  .css-1h0t7zq-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #22674e;
  background: #daf6ec;
  border: 1px solid #daf6ec;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

<div
    class="css-1h0t7zq-StyledContainer e11loam60"
  >
    1
  </div>
</DocumentFragment>
`;

exports[`Bullet sentiment render warning 1`] = `
<DocumentFragment>
  .css-8jzxlw-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #7c5400;
  background: #fff6e6;
  border: 1px solid #fff6e6;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

<div
    class="css-8jzxlw-StyledContainer e11loam60"
  >
    1
  </div>
</DocumentFragment>
`;

exports[`Bullet size render medium 1`] = `
<DocumentFragment>
  .css-1k74lo7-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  background: #ffffff;
  border: 1px solid #d9dadd;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

<div
    class="css-1k74lo7-StyledContainer e11loam60"
  >
    1
  </div>
</DocumentFragment>
`;

exports[`Bullet size render small 1`] = `
<DocumentFragment>
  .css-rxjap1-StyledContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #3f4250;
  background: #ffffff;
  border: 1px solid #d9dadd;
  width: 24px;
  height: 24px;
  font-size: 14px;
}

<div
    class="css-rxjap1-StyledContainer e11loam60"
  >
    1
  </div>
</DocumentFragment>
`;
